# vodf-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  fits_templates.rst  index.rst  installation.rst  reference.rst  schemas.rst  vodf-schemas.rst
src/: visitor.py
src/vodftools/: __init__.py  fits_template.py  plantuml.py  schema.py  validators.py  visitor.py  vodf_metadata.py
src/vodftools/cli/: make_templates.py
src/vodftools/models/: __init__.py  level1.py  metadata.py
src/vodftools/models/tests/: test_level1.py
src/vodftools/tests/: test_fits_template.py  test_plantuml.py  test_schema.py  test_vodf_metadata.py
