[build-system]
requires = [
         "setuptools>=65",
         "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "vodftools"
description = "VODF data format tools for validation and documentation"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Karl Kosack", email = "karl.kosack@cea.fr"},
]

requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pydantic",
    "astropy",
]

# needed for setuptools_scm, we don't define a static version
dynamic = ["version"]

[project.urls]
repository = "https://github.com/vodf/vodftools"

# Command-line scripts mapping the name of the tool to the import and function >
[project.scripts]
vodf-make-templates = "vodftools.cli.make_templates:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["vodftools._dev_version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
doc = [
  "sphinx",
  "numpydoc",
  "pydata-sphinx-theme",
  "autodoc_pydantic",
  "erdantic",
]
dev = [
  "setuptools_scm",
]

# we can use self-references to simplify all
all = [
  "vodftools[test,doc,dev]",
]

[tool.setuptools_scm]
write_to = 'src/vodftools/_version.py'

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "--verbose"


[tool.ruff]
line-length = 88
target-version = "py310"


[tool.ruff.lint]
extend-select = [
    "I", # isort
    "N", # pep8 naming
    "D", # pydocstyle
    "NPY", # numpy
    "PT", # pytest
    "UP", # pyupgrade
    "COM", # flake8-commas
    "ISC", # implicit string concat rules
    "ICN", # import name conventions
    "G", # logging
]
ignore = [
    "COM812", # incompatible with ruff format
    "ISC001", # incompatible with ruff format
    "D205", # docstring first line
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# no documentation linting for test files
"**/tests/**" = ["D"]
"**/tests_*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
